adicionando propriedade às listas

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/agrupam-e-pseudoclasses/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/agrupam-e-pseudoclasses/style.css
@@ -10,3 +10,7 @@ li:hover {
 li:active {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.estilo-lista {
+    list-style: none;
+}
