headers vermelhas, italico e tamanho de algumas

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/combin-e-classes-descendentes/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/combin-e-classes-descendentes/style.css
@@ -11,5 +11,14 @@ ol li:nth-of-type(odd) {
 }
 
 h1, h3 {
-    
+    color: red;
+}
+
+.italic {
+    font-style: italic;
+}
+
+h3.italic {
+    font-size: 40px;
+    border: 1px solid black;
 }
