--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/combin-e-classes-descendentes/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-03-seletores-e-posicionamento/combin-e-classes-descendentes/style.css
@@ -10,7 +10,8 @@ ol li:nth-of-type(odd) {
     text-transform: uppercase;
 }
 
-h1, h3 {
+h1,
+h3 {
     color: red;
 }
 
@@ -21,4 +22,44 @@ h1, h3 {
 h3.italic {
     font-size: 40px;
     border: 1px solid black;
+}
+
+li {
+    font-size: 20px;
+}
+
+li em {
+    font-weight: 800;
+}
+
+#linguagens li:not(:nth-child(n + 4)) {
+    color: blue;
+}
+
+.pink-bg {
+    background-color: pink;
+}
+
+ul.lista-aliados li:hover {
+    font-weight: bold;
+}
+
+.lista-aliados li a[href*="stackoverflow"] {
+    color: orange;
+}
+
+.lista-aliados li a[href*="w3schools"] {
+    color: green;
+}
+
+.lista-aliados li a[href*="mozilla"] {
+    color: black;
+}
+
+.lista-aliados li a[href*="devdocs"] {
+    color: yellow;
+}
+
+.lista-aliados li a[href*="trybe"] {
+    color: green;
 }
