exemplo para fixar - pódio organizado

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exemplo-para-fixar/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exemplo-para-fixar/style.css
@@ -6,8 +6,10 @@ h1 {
     background-color: rgb(235, 200, 84);
     font-size: 20px;
     height: 50px;
-    text-align: center;
+    text-align:center;
     width: 200px;
+    list-style: none;
+    margin: auto;
   }
 
   .second {
@@ -15,7 +17,9 @@ h1 {
     font-size: 20px;
     height: 50px;
     text-align: center;
-    width: 300px;
+    width: 48%;
+    display: inline-block;
+    
   }
 
   .third {
@@ -23,5 +27,14 @@ h1 {
     font-size: 20px;
     height: 50px;
     text-align: center;
-    width: 300px;
+    width: 48%;
+    display: inline-block;
+    
   }
+
+  .team-podium {
+    background-color: aqua;
+
+  }
+
+  
