--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exemplo-para-fixar/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exemplo-para-fixar/style.css
@@ -33,8 +33,27 @@ h1 {
   }
 
   .team-podium {
-    background-color: aqua;
-
+    /* background-color:dimgray; */
   }
 
+  .award {
+    background-color: cyan; 
+  }
+
+  .award li {
+    list-style: none;
+    display: inline;
+    width: 80%;
+    background-color: blue;
+    text-align: center;
+    
+  }
+
+  .award h3 {
+    text-align:center;
+  }
+
+  .award ul {
+    text-align: center;
+  }
   
