retirando o background color que tinha esquecido - exemplo para fixar

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exemplo-para-fixar/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exemplo-para-fixar/style.css
@@ -37,14 +37,14 @@ h1 {
   }
 
   .award {
-    background-color: cyan; 
+    /* background-color: cyan;  */
   }
 
   .award li {
     list-style: none;
     display: inline;
     width: 80%;
-    background-color: blue;
+    /* background-color: blue; */
     text-align: center;
     
   }
