adicionando secao 2 e 3 - visão e informações gerais

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exercicios-do-dia/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exercicios-do-dia/style.css
@@ -22,3 +22,25 @@ h4 {
     background-color: red;
     width: 40%;
 }
+
+.fact-two {
+    height: 270px;
+    background-color: aqua;
+    width: 90%;
+    margin: 0;
+    overflow: auto;
+    /* overflow-x: 200px; */
+}
+
+.fact-two img {
+    height: 160px;
+    display: inline-block;
+
+}
+
+.fact-two p {
+    display: inline-block;
+    background-color: red;
+    width: 70%;
+    
+}
