finalizado, só falta posicionar aside

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exercicios-do-dia/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exercicios-do-dia/style.css
@@ -85,3 +85,15 @@ h4 {
     
 }
 
+.bibliography li {
+    list-style: none;
+}
+
+footer p {
+    text-align: center;
+}
+
+nav li {
+    list-style: none;
+    /* background-color: aqua; */
+}
