--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exercicios-do-dia/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-04-html-semantico/exercicios-do-dia/style.css
@@ -31,6 +31,7 @@ h4 {
     /* background-color: aqua; */
     margin: 0;
     overflow: auto;
+    /* width: 90%; */
     
 }
 
@@ -50,6 +51,9 @@ h4 {
     width: 60%;
     overflow: auto;
     text-align: justify;
+    height: 280px;
+    position: absolute;
+    
 }
 
 
