ajustado container dos filmes e aside

--- a/fundamentos/secao-06-html-e-css-forms-flex-e-responsivo/dia-04-flexbox-parte-2/exercicios-prática/style.css
+++ b/fundamentos/secao-06-html-e-css-forms-flex-e-responsivo/dia-04-flexbox-parte-2/exercicios-prática/style.css
@@ -52,6 +52,8 @@
   .movie-container {
     display: flex;
     flex-direction: column;
+    flex-basis: 700px;
+    flex-grow: 10;
   }
   
   .movie-container h2 {
@@ -79,6 +81,9 @@
     display: flex;
     flex-direction: column;
     margin: 20px;
+    flex-basis: 350px;
+    justify-content: center;
+    flex-grow: 1;
   }
   
   .aside-container h3, h4 {
@@ -89,4 +94,10 @@
   .aside-container p {
     margin: 10px 0;
     text-align: justify;
+  }
+
+  .films {
+    display: flex;
+    flex-basis: 16%;
+    flex-grow: 1;
   }
